@@ -39,6 +39,11 @@
    - jaredy@cvs.openbsd.org 2005/09/30 20:34:26
      [ssh-keyscan.1]
      deploy .An -nosplit; ok jmc
+   - dtucker@cvs.openbsd.org 2005/10/03 07:44:42
+     [canohost.c]
+     Relocate check_ip_options call to prevent logging of garbage for
+     connections with IP options set.  bz#1092 from David Leonard,
+     "looks good" deraadt@
 
 20050930
  - (dtucker) [openbsd-compat/openbsd-compat.h] Bug #1096: Add prototype
@@ -3079,4 +3084,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3913 2005/10/03 08:20:28 dtucker Exp $
+$Id: ChangeLog,v 1.3914 2005/10/03 08:23:44 dtucker Exp $
